# openGLPlotLive

./: CMakeLists.txt
Installers/: installDependenciesUbuntu.sh
apps/: CMakeLists.txt
apps/examples/: CMakeLists.txt  examplePlot.cpp  movingTimeframe.cpp  robotMovingTimeframe.cpp
apps/selfBalacingRobotPlot/: CMakeLists.txt  UdpServer.cpp  UdpServer.hpp  main.cpp  msg.cpp  msg.hpp  qformat.cpp  qformat.hpp  udpServer.cpp  udpServer.hpp
src/lines/: ISingleLine2D.cpp
